<resources>
    <string name="app_name">TopCity-1</string>
    <string name="build_your">Build Your</string>
    <string name="dream_home">Dream Home</string>
    <string name="lorem_ipsum_dolor_sit_amet_consetetur_sadipscing_elitr_sed_diam_nonumy_eirmod_tempor_invidunt_ut_labore_et">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et</string>
    <string name="email_addresses">Email Address</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="login">Login</string>
    <string name="biometric_login">Biometric Login</string>
    <string name="continue_as_guest">Continue As Guest</string>
    <string name="enter_registered_cnic">Enter Registered CNIC</string>
    <string name="name">Name</string>
    <string name="name_re">Name <font color='#FF0000'>*</font></string>
    <string name="phone_re">Phone <font color='#FF0000'>*</font></string>
    <string name="email_re">Email <font color='#FF0000'>*</font></string>
    <string name="msg_re">Message <font color='#FF0000'>*</font></string>
    <string name="required"><font color='#FF0000'>* </font>Requried</string>
    <string name="subject_re">Subject <font color='#FF0000'>*</font></string>
    <string name="_42101_0372650_2">42101-0372650-2</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Signup</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="a_otp_has_been_sent_to_your_mobile_number">A OTP has been sent to your mobile number</string>
    <string name="_987_6543_3211">+987 6543 3211</string>
    <string name="useremail_domainname_com">useremail@domainname.com</string>
    <string name="resend_otp"><u>Resend OTP</u></string>
    <string name="and_to_your_email_address">and to your email address</string>
    <string name="didn_t_you_receive_the_otp">Didn\'t you receive the OTP?</string>
    <string name="verify">Verify</string>
    <string name="we_will_send_you_a_one_time_password_to_this_mobile_number">We will send you a one-time password to this mobile number</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="reset_with_email">Reset with Email</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="reset_with_phone_number">Reset with Phone Number</string>
    <string name="password_desn_t_match">Password Desn\'t match</string>
    <string name="enter_the_otp_sent_to">Enter the OTP sent to</string>
    <string name="password_reset">Password Reset</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="new_password">New Password</string>
    <string name="update">Update</string>
    <string name="please_place_your_finger_over_the_sensor">Please place your finger over the sensor</string>
    <string name="don_t_have_a_fingerprint_tap_here"><u>Don\'t have a fingerprint? Tap here</u></string>
    <string name="biometric_sign_up">Biometric Sign Up</string>
    <string name="put_your_finger_over_the_sensor_and_lift_afterwhen_you_feel_the_vibration_please_repeatthis_procedure">Put your finger over the sensor and lift afterwhen you feel the vibration. Please repeatthis procedure.</string>
    <string name="login_to_access_the_app">Login To Access The App</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="features">Features</string>
    <string name="service_desk">Service Desk</string>
    <string name="master_plan">Master Plan</string>
    <string name="more">More</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Hello,</string>
    <string name="talha">Talha!</string>
    <string name="news_and_announcements">News and Announcements</string>
    <string name="my_property">My Property</string>
    <string name="on_special_insistence_of_our_dealer_s_and_valued_allotter_s_the_management_of_topcity_1_has_decided_to_extend_the_new_year_construction_incentive_offer_till_30th_april_2021">On special insistence of our dealer\'s and …valued allotter\'s, the Management of Topcity-1 has decided to extend the "New Year Construction Incentive Offer" till 30th April,2021.</string>
    <string name="jan">Jan</string>
    <string name="complaint">Complaint</string>
    <string name="_453698">453698</string>
    <string name="active">Active</string>
    <string name="water">water</string>
    <string name="update_details">Update Details</string>
    <string name="events">Events</string>
    <string name="_5_marla_balloting_event">5 Marla Balloting Event</string>
    <string name="view_more"><u>View More</u></string>
    <string name="_24_november_2021">24 November 2021</string>
    <string name="_07_03_pm">07:03 pm</string>
    <string name="time">Time:</string>
    <string name="_59">59</string>
    <string name="standard_sign_in">Standard Sign In</string>
    <string name="id">ID:</string>
    <string name="good_morning">Good Morning</string>
    <string name="b_01_block_7_street_2_in_topcity1">B-01 - Block 7 - Street 2 In Topcity1</string>
    <string name="my_account">My Account</string>
    <string name="profile_options">Profile Options</string>
    <string name="logout"><u>Logout</u></string>
    <string name="create_shared_accounts">Create Shared Accounts</string>
    <string name="cnic_number">CNIC Number</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="edit_details">Edit Details</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="_25">25</string>
    <string name="construction_incentive_offer_for_topcity_1_allottees_is_extended">Construction Incentive Offer For Topcity-1 Allottees Is Extended.</string>
    <string name="please_note_that_the_incentives_offered_by_topcity_1_are_only_for_residential_and_mini_commercial_in_sector_a_b_c_d_i_partial_possession_and_the_offer_will_expire_on_april_30_2021_note_the_allotters_must_have_to_start_construction_within_02_months_from_the_date_of_this_offer_otherwise_they_will_have_to_pay_all_the_waived_off_amounts"><![CDATA[*Please note that the incentives offered by TopCity-1 are only for Residential and Mini-Commercial in Sector A, B, C ,D & I(partial Possession); and the offer will expire on April 30, 2021.Note: The allotters must have to start construction within 02-months from the date of this offer otherwise, they will have to pay all the waived-off amounts.]]></string>
    <string name="previous"><u>Previous</u></string>
    <string name="next"><u>Next</u></string>
    <string name="block">Block</string>
    <string name="plot_no">Plot No</string>
    <string name="f_new">F New</string>
    <string name="_341">341</string>
    <string name="registration_number">Registration Number</string>
    <string name="tc_250_1647_t">TC-250-1647/T</string>
    <string name="property_type">Property Type</string>
    <string name="location_details">Location Details</string>
    <string name="ownership">Ownership</string>
    <string name="muhammad_talha_bin_ali">Muhammad Talha Bin ali</string>
    <string name="current_address">Current Address</string>
    <string name="payment_details">Payment Details</string>
    <string name="rs">Rs</string>
    <string name="_925_000">925,000</string>
    <string name="installment_payable">Installment payable</string>
    <string name="total_balance">Total Balance</string>
    <string name="current_outstanding">Current Outstanding</string>
    <string name="surcharge_payable">Surcharge Payable</string>
    <string name="surcharge_paid">Surcharge Paid</string>
    <string name="surcharge_waived">Surcharge Waived</string>
    <string name="surcharge_balance">Surcharge balance</string>
    <string name="net_outstanding">Net Outstanding</string>
    <string name="gross_payable">Gross Payable</string>
    <string name="shared_with">Shared With</string>
    <string name="_2_users">2 Users</string>
    <string name="view_details">View Details</string>
    <string name="you_dream_it">You Dream it</string>
    <string name="residency">Residency</string>
    <string name="we_built_it">We built it</string>
    <string name="community_services">Community Services</string>
    <string name="shared_accounts">Shared Accounts</string>
    <string name="add_a_new_user">+ Add a New User</string>
    <string name="create_a_shared_account">Create A Shared Account</string>
    <string name="create_accounts">Create Accounts</string>
    <string name="share_your_property">Share Your Property</string>
    <string name="enter_new_user_details">Enter New User Details</string>
    <string name="phone_number">Phone Number</string>
    <string name="share">Share</string>
    <string name="your_account_sharing_invitation_has_been_sent_successfully">Your Account Sharing Invitation Has Been Sent Successfully</string>
    <string name="done">Done</string>
    <string name="accounts">Accounts</string>
    <string name="_1">+1</string>
    <string name="person_sign">%</string>
    <string name="total_paid">Total Paid</string>
    <string name="no_property_found">No Property Found</string>
    <string name="your_property_is_upto_the_mark">Your property is upto the mark</string>
    <string name="no_news_and_announcements">No News and Announcements</string>
    <string name="no_events_found">There are no upcoming Events</string>
    <string name="detail_view">Detailed View</string>
    <string name="smart_view">Smart View</string>
    <string name="complaints">Complaints</string>
    <string name="no_sub_features_available">No Sub Features Available</string>
    <string name="comming_soon">Comming Soon</string>
    <string name="_7_days_ago">7 days ago</string>
    <string name="water_complaint">Water Complaint</string>
    <string name="withdraw">Withdraw</string>
    <string name="your_complaint_has_been_withdraw">Your Complaint Has Been Withdraw</string>
    <string name="chose_the_category_under_which_your_complaint_falls">Chose the category under which your complaint falls.</string>
    <string name="shared_property">Shared Property</string>
    <string name="property_id">Property ID</string>
    <string name="account_detail">Account Detail</string>
    <string name="user_type">User Type</string>
    <string name="remove_this_user">Remove This User</string>
    <string name="you_have_successfully_removed_this_user">You have Successfully removed this user</string>
    <string name="topcity_1">TopCity-1</string>
    <string name="_324_2324311">324-2324311</string>
    <string name="_92">+92</string>
    <string name="chose_the_catagory_under_which_your_complaint_falls">Chose the Catagory under which your complaint falls.</string>
    <string name="tell_us_your_problem">Tell us your Problem</string>
    <string name="add_details">Add Details</string>
    <string name="your_message">Your Message here..</string>
    <string name="attactement">Attachement</string>
    <string name="submit">Submit</string>
    <string name="add_photos">Add Photos</string>
    <string name="no_recently_complaint">No Recently Complaint</string>
    <string name="contact_detail">Contact Detail</string>
    <string name="for_lodge">For lodge</string>
    <string name="complaints_blue"><u>Complaints.</u></string>
    <string name="site_office">Site Office</string>
    <string name="google_maps_key">AIzaSyBY3c7RFvwzs06juEg0nzIU7PVERTIV3U8</string>
    <string name="announcement">Announcement</string>
    <string name="downtown_office">Downtown Office</string>
    <string name="topcity1_location">TopCity1 Location</string>
    <string name="address">Address</string>
</resources>