<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.HS.Topcity.Activity.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_features"
        android:name="com.HS.Topcity.Fragsment.Features"
        android:label="@string/features"
        tools:layout="@layout/fragment_features" />

    <fragment
        android:id="@+id/nav_ServiceDesk"
        android:name="com.HS.Topcity.Fragsment.ServicesDesk"
        android:label="@string/service_desk"
        tools:layout="@layout/fragment_services_desk" />

    <fragment
        android:id="@+id/nav_MasterPlan"
        android:name="com.HS.Topcity.Fragsment.MasterPlan"
        android:label="@string/master_plan"
        tools:layout="@layout/fragment_master_plan" />

    <fragment
        android:id="@+id/nav_More"
        android:name="com.HS.Topcity.Fragsment.UserSharedAccount"
        android:label="@string/accounts"
        tools:layout="@layout/fragment_user_shared_account" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.HS.Topcity.Activity.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.HS.Topcity.Activity.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>