<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@mipmap/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/nav_features"
        android:icon="@mipmap/favorites_icon"
        android:title="@string/features" />
    <item
        android:id="@+id/nav_ServiceDesk"
        android:title="@string/service_desk" />

    <item
        android:id="@+id/nav_MasterPlan"
        android:icon="@mipmap/master_plan"
        android:title="@string/master_plan" />

    <item
        android:id="@+id/nav_More"
        android:icon="@mipmap/add_user_icon"
        android:title="@string/accounts" />

<!--    <item-->
<!--        android:id="@+id/navigation_dashboard"-->
<!--        android:icon="@drawable/ic_dashboard_black_24dp"-->
<!--        android:title="@string/title_dashboard" />-->

<!--    <item-->
<!--        android:id="@+id/navigation_notifications"-->
<!--        android:icon="@drawable/ic_notifications_black_24dp"-->
<!--        android:title="@string/title_notifications" />-->

</menu>