<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragsment.Contact.ContactUsFrag">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/contact_detail"
            android:fontFamily="@font/sweetsanspro_bold"
            android:textSize="@dimen/_18sdp">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/for_lodge"
                android:fontFamily="@font/sweetsanspro_regular"
                android:textSize="@dimen/_10sdp">
            </TextView>
            <TextView
                android:id="@+id/complaint_screen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/bg_light_blue_color"
                android:layout_marginStart="5dp"
                android:text="@string/complaints_blue"
                android:fontFamily="@font/sweetsanspro_bold"
                android:textSize="@dimen/_10sdp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingTop="@dimen/_15sdp"
            android:paddingBottom="@dimen/_15sdp"
            android:paddingRight="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/shadow1">


            <LinearLayout
                android:id="@+id/feedback_call"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_30sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:background="@drawable/shadow1"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:src="@mipmap/phone_icon">
                </ImageView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/_16sdp"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_13sdp"
                        android:fontFamily="@font/sweetsanspro_regular"
                        android:text="@string/phone">
                    </TextView>
                    <TextView
                        android:id="@+id/contactUs_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="3dp"
                        android:textSize="@dimen/_11sdp"
                        android:layout_marginEnd="5dp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/sweetsanspro_regular"
                        android:text="@string/_925_000">
                    </TextView>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/feedback_email_go"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_25sdp"
                android:paddingTop="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:background="@drawable/shadow1"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:src="@mipmap/email_icon">
                </ImageView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/_10sdp"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_13sdp"
                        android:fontFamily="@font/sweetsanspro_regular"
                        android:text="@string/email">
                    </TextView>
                    <TextView
                        android:id="@+id/contactUs_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="3dp"
                        android:textColor="@color/black"
                        android:layout_marginEnd="5dp"
                        android:textSize="@dimen/_11sdp"
                        android:fontFamily="@font/sweetsanspro_regular"
                        android:text="@string/location_details">
                    </TextView>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_30sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:background="@drawable/shadow1"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:src="@mipmap/locaton_icon">
                </ImageView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/_14sdp"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_13sdp"
                        android:fontFamily="@font/sweetsanspro_regular"
                        android:text="@string/address">
                    </TextView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="3dp"
                        android:textSize="@dimen/_10sdp"
                        android:layout_marginEnd="5dp"
                        android:textColor="#6D0288D1"
                        android:fontFamily="@font/sweetsanspro_regular"
                        android:text="@string/site_office">
                    </TextView>
                    <TextView
                        android:id="@+id/contactUs_address_siteoffice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="3dp"
                        android:textSize="@dimen/_11sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/sweetsanspro_regular"
                        android:text="@string/lorem_ipsum_dolor_sit_amet_consetetur_sadipscing_elitr_sed_diam_nonumy_eirmod_tempor_invidunt_ut_labore_et">
                    </TextView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="3dp"
                        android:textSize="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_15sdp"                        android:layout_marginTop="@dimen/_10sdp"
                        android:textColor="#6D0288D1"
                        android:fontFamily="@font/sweetsanspro_regular"
                        android:text="@string/downtown_office">
                    </TextView>
                    <TextView
                        android:id="@+id/contactUs_address_downOffice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="3dp"
                        android:textSize="@dimen/_11sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/sweetsanspro_regular"
                        android:text="@string/lorem_ipsum_dolor_sit_amet_consetetur_sadipscing_elitr_sed_diam_nonumy_eirmod_tempor_invidunt_ut_labore_et">
                    </TextView>
                </LinearLayout>
            </LinearLayout>



        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="3dp"
            android:textSize="@dimen/_11sdp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/black"
            android:fontFamily="@font/sweetsanspro_regular"
            android:text="@string/topcity1_location">
        </TextView>
        <fragment
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:id="@+id/map_frag1"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="20dp"
            android:name="com.google.android.gms.maps.SupportMapFragment" />
        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_height="@dimen/_200sdp"
            android:layout_weight="1" />
    </LinearLayout>



</ScrollView>