<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center|top"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:elevation="12dp"
                android:id="@+id/view2"
                android:backgroundTint="@color/light_dim_gray"
                app:cardCornerRadius="25dp"
                android:layout_centerHorizontal="true">
                <ImageView
                    android:id="@+id/user_image"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:src="@drawable/ic_baseline_person_24"
                    android:scaleType="centerCrop"/>
            </androidx.cardview.widget.CardView>


        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/sweetsanspro_medium"
                android:text="@string/name">
            </TextView>
            <TextView
                android:id="@+id/property_detail_userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_13sdp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"
                android:fontFamily="@font/sweetsanspro_light"
                android:text="@string/muhammad_talha_bin_ali">
            </TextView>


        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/sweetsanspro_medium"
                android:text="@string/phone">
            </TextView>
            <TextView
                android:id="@+id/property_detail_userNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_13sdp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"
                android:fontFamily="@font/sweetsanspro_light"
                android:text="@string/_987_6543_3211">
            </TextView>

        </LinearLayout>



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/current_address"
            android:padding="10dp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/sweetsanspro_bold"
            android:textSize="@dimen/_18sdp">
        </TextView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/property_detail_currentAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_13sdp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"
                android:fontFamily="@font/sweetsanspro_light"
                android:text="@string/lorem_ipsum_dolor_sit_amet_consetetur_sadipscing_elitr_sed_diam_nonumy_eirmod_tempor_invidunt_ut_labore_et">
            </TextView>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>